--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "dayjs": "^1.11.9",
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.3",
     "sass": "^1.63.6",
+    "underscore": "^1.13.6",
     "vant": "^4.6.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2"
